# ghcloneall

./: .coveragerc  .gitignore  .travis.yml  CHANGES.rst  LICENCE  MANIFEST.in  Makefile  README.rst  clone_all_zf_repos.py  cloneall.py  ghcloneall.py  setup.cfg  setup.py  tests.py  tox.ini
.github/workflows/: build.yml
